# cat-rpg-tg

./: .gitignore  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
.github/workflows/: push-main.yml
src/: Dockerfile  db.py  main.py  requirements.txt
src/commands/: __init__.py  start.py
src/commands/callback_query_handlers/: __init__.py  language.py  settings.py
src/commands/debug/: utils.py
src/core/: __init__.py  bot.py  enums.py  keyboards.py  settings.py  utils.py
src/middleware/: __init__.py  register_user.py
src/migrations/: env.py
src/migrations/versions/: 1649cd44bff1_init.py  9dc9bc311b77_init.py
src/models/: base.py  user.py
src/models/redis/: replymarkupmessage.py
src/services/: reply_markup_message.py  user.py
src/services/messages/: choose_language.py  menu.py  settings.py
src/states/: __init__.py  hello_world.py
src/texts/: languages.py  loader.py
