[tool.poetry]
name = "sample_tg_bot_app"
version = "0.1.0"
description = ""
authors = ["Rashid Mingazov <my@rdmingazov.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
aiogram = "^2.25.1"
pydantic = {extras = ["dotenv"], version = "^1.10.7"}
sqlmodel = "^0.0.8"
alembic = "^1.10.3"
psycopg2-binary = "^2.9.6"
httpx = "^0.24.0"
aiohttp = "^3.8.4"

[tool.poetry.group.dev.dependencies]
isort = "5.10.1"
flake8 = "5.0.4"
black = "22.6.0"
flake8-pyproject = "^1.2.3"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"

[tool.flake8]
ignore = ['F401', 'F403']
max-line-length = 120

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
